[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "azqueuemanager-rss"
description = "rss-parser for AZQueueManager"
dependencies = ['azqueuemanager', 'feedparser', 'dateparser']
readme = "README.md"
license = { text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["azqueuemanager", "extension", "rss", "azure storage queues"]
requires-python = ">=3.10"
version = "0.0.1"